--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@emotion/is-prop-valid": "^1.1.0",
     "@emotion/unitless": "^0.7.4",
     "css-to-react-native": "^3.0.0",
+    "rimraf": "^3.0.2",
     "shallowequal": "^1.1.0",
     "stylis": "^4.0.10"
   },
@@ -121,7 +122,7 @@
     "react-native": "^0.64.2",
     "react-primitives": "^0.8.0",
     "react-test-renderer": "^16.8.6",
-    "rollup": "^2.47.0",
+    "rollup": "^2.56.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
